# filelift

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: design.md
i18n/en/: filelift.ftl
i18n/zh-CN/: filelift.ftl
scripts/: install.ps1  install.sh
src/: cli.rs  completion_command.rs  config.rs  config_command.rs  credentials_command.rs  diagnostic_log.rs  i18n.rs  interactive.rs  interactive_completion.rs  language_command.rs  log_command.rs  machine_key.rs  main.rs  output.rs  profile.rs  secret.rs  secret_file.rs  target.rs  target_command.rs  update_check.rs  upgrade_command.rs  upload.rs
src/storage/: s3.rs
tests/: cli.rs  script_checks.rs
