[package]
name = "filelift"
version = "0.1.0"
edition = "2024"
description = "A small CLI for lifting local files to S3-compatible object storage."
license = "MIT"
repository = "https://github.com/EaveLuo/filelift"
readme = "README.md"
keywords = ["s3", "r2", "storage", "upload", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
aws-config = "1.8.18"
aws-credential-types = "1.2.14"
aws-sdk-s3 = "1.135.0"
aws-types = "1.3.16"
camino = "1.2.2"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
keyring = "4.0.1"
keyring-core = "1.0.0"
mime_guess = "2.0.5"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
toml = "1.1.2"
url = "2.5.8"
