[package]
name = "filelift"
version = "0.2.0"
edition = "2024"
description = "A small CLI for lifting local files to S3-compatible object storage."
license = "MIT"
repository = "https://github.com/EaveLuo/filelift"
readme = "README.md"
keywords = ["s3", "r2", "storage", "upload", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anstream = "1.0.0"
anstyle = "1.0.14"
anyhow = "1.0.102"
aws-config = "1.8.18"
aws-credential-types = "1.2.14"
aws-sdk-s3 = "1.135.0"
aws-types = "1.3.16"
base64 = "0.22.1"
camino = "1.2.2"
chacha20poly1305 = "0.10.1"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
i18n-embed = { version = "0.16.0", features = ["fluent-system"] }
indicatif = "0.18.4"
inquire = "0.9.1"
keyring-core = "1.0.0"
mime_guess = "2.0.5"
rpassword = "7.5.4"
rust-embed = "8.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shell-words = "1.1.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
toml = "1.1.2"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
url = "2.5.8"

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = "1.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.1.0"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"
