[package]
name = "filelift"
version = "0.3.2"
edition = "2024"
description = "A small CLI for lifting local files to S3-compatible object storage."
license = "MIT"
repository = "https://github.com/EaveLuo/filelift"
readme = "README.md"
keywords = ["s3", "r2", "storage", "upload", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anstream = "1.0.0"
anstyle = "1.0.14"
anyhow = "1.0.102"
aws-sdk-s3 = "1.135.0"
base64 = "0.22.1"
camino = "1.2.2"
chacha20poly1305 = "0.10.1"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
i18n-embed = { version = "0.16.0", features = ["fluent-system"] }
indicatif = "0.18.4"
inquire = "0.9.1"
machine-uid = "0.6.0"
mime_guess = "2.0.5"
rpassword = "7.5.4"
rust-embed = "8.9.0"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
shell-words = "1.1.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
toml = "1.1.2"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
unicode-width = "0.2.2"
ureq = "2.12.1"
url = "2.5.8"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"

[profile.release.package.aws-sdk-s3]
opt-level = 1
